@@ -2,6 +2,9 @@
 Next Release
 ------------
 
+- Added more logging during zodbconvert to show that something is
+  happening and give an indication of how far along the process is.
+
 - Fixed a missing import in the blob cache cleanup code.
 
 1.5.0a1 (2010-10-21)
